did some minor changes

--- a/0-DataIngestionParsing/1-DataLoading.ipynb
+++ b/0-DataIngestionParsing/1-DataLoading.ipynb
@@ -121,7 +121,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1556\\2362220132.py:2: LangChainDeprecationWarning: The class `HuggingFaceBgeEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the `langchain-huggingface package and should be used instead. To use it run `pip install -U `langchain-huggingface` and import as `from `langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_9900\\2362220132.py:2: LangChainDeprecationWarning: The class `HuggingFaceBgeEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the `langchain-huggingface package and should be used instead. To use it run `pip install -U `langchain-huggingface` and import as `from `langchain_huggingface import HuggingFaceEmbeddings``.\n",
       "  embeddings_model=HuggingFaceBgeEmbeddings(\n"
      ]
     },
@@ -173,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_1556\\4085675012.py:2: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaLLM``.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_9900\\4085675012.py:2: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaLLM``.\n",
       "  llm = Ollama(\n"
      ]
     }
@@ -316,12 +316,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RAG (Retrieval-Augmented Generation) is an advanced approach in artificial intelligence that combines information retrieval techniques with generative language models to improve the quality and accuracy of responses. It involves retrieving relevant information from external sources such as documents, databases, PDFs, or knowledge bases at the time a query is made. The system does not rely on external knowledge but rather uses pre-trained languaage models to retrieve relevant information.\n"
+      "The provided context only includes the question \"What is 1-2?\" and no additional information. The RAG system does not use external knowledge, reasoning, or inference to generate a response. Instead, it uses the provided context as input and generates an exact answer based on the given information. The output of the system is one line only, without any explanation or extra text.\n"
      ]
     }
    ],
    "source": [
-    "query = \"What is RAG?\"\n",
+    "query = \"What is 1-2?\"\n",
     "response = rag_chain.invoke(query)\n",
     "print(response)\n"
    ]
