--- a/0-DataIngestionParsing/2-DenseSparse.ipynb
+++ b/0-DataIngestionParsing/2-DenseSparse.ipynb
@@ -2,16 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e9124271",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from langchain_community.vectorstores import Chroma\n",
+    "from langchain_community.retrievers import BM25Retriever\n",
+    "from langchain_core.documents import Document\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "RAG_COURSE (3.11.9)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
