--- a/test.ipynb
+++ b/test.ipynb
@@ -1,17 +1,8 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ed4a867",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
-   "display_name": "RAG_CRASH_COURSE (3.11.9)",
+   "display_name": "RAG_COURSE (3.11.9)",
    "language": "python",
    "name": "python3"
   },
